# sparqy

./: .env  .gitignore  .pre-commit-config.yaml  README.md  example.env  inventory_history.sql  main.py  pyproject.toml  tests.py  trial_inventory.sql
.github/: dependabot.yml
.github/agents/: speckit.clarify.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.tasks.agent.md
.github/workflows/: pre-commit.yml  tests.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
