[project]
name = "sparqy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huey>=2.5.3",
    "ibis-framework[mssql]>=10.8.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]
